--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cloudinary": "^1.32.0",
+    "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
